--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react-scripts": "^5.0.1"
   }
-  
 }
