--- a/package.json
+++ b/package.json
@@ -12,6 +12,19 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
