--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "gh-pages": "^6.1.0"
+    "gh-pages": "^6.1.0",
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.13"
   },
   "homepage": "https://github.com/oppor-tunity/deals",
   "scripts": {
