remove package.json dependency

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "devDependencies": {
-    "gh-pages": "^6.1.0",
-    "@babel/plugin-proposal-private-property-in-object": "^1.0.13"
+    "gh-pages": "^6.1.0"
   },
   "homepage": "https://github.com/oppor-tunity/deals",
   "scripts": {
