--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1"
   },
